fixed whitespace problem

--- a/static/main.css
+++ b/static/main.css
@@ -150,3 +150,5 @@
    height:50%;
 
 }
+
+body {overflow-x: hidden}
